antlr/.antlr/JSONFormulaParser.java
// Generated from /Users/johnbrinkman/dev/json-formula/antlr/JSONFormula.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JSONFormulaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		SIGNED_INT=25, NUMBER=26, FUNCTIONS=27, COMPARATOR=28, RAW_STRING=29, 
		JSON_CONSTANT=30, NAME=31, STRING=32, REAL_OR_EXPONENT_NUMBER=33, WS=34;
	public static final int
		RULE_formula = 0, RULE_expression = 1, RULE_unary_op = 2, RULE_binary_op = 3, 
		RULE_postfix_op = 4, RULE_function_call = 5, RULE_parameter = 6, RULE_nonempty_expr_list = 7, 
		RULE_expression_list = 8, RULE_parm_separator = 9, RULE_jmesPathExpression = 10, 
		RULE_chainedExpression = 11, RULE_wildcard = 12, RULE_multiSelectList = 13, 
		RULE_multiSelectHash = 14, RULE_keyvalExpr = 15, RULE_bracketSpecifier = 16, 
		RULE_slice = 17, RULE_functionExpression = 18, RULE_functionArg = 19, 
		RULE_currentNode = 20, RULE_expressionType = 21, RULE_literal = 22, RULE_identifier = 23, 
		RULE_jsonObject = 24, RULE_jsonObjectPair = 25, RULE_jsonArray = 26, RULE_jsonValue = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"formula", "expression", "unary_op", "binary_op", "postfix_op", "function_call", 
			"parameter", "nonempty_expr_list", "expression_list", "parm_separator", 
			"jmesPathExpression", "chainedExpression", "wildcard", "multiSelectList", 
			"multiSelectHash", "keyvalExpr", "bracketSpecifier", "slice", "functionExpression", 
			"functionArg", "currentNode", "expressionType", "literal", "identifier", 
			"jsonObject", "jsonObjectPair", "jsonArray", "jsonValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'+'", "'-'", "'<>'", "'&'", "'*'", "'/'", "'^'", 
			"'%'", "','", "'.'", "'&&'", "'||'", "'!'", "'|'", "'['", "']'", "'{'", 
			"'}'", "':'", "'[?'", "'@'", "'`'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "SIGNED_INT", "NUMBER", "FUNCTIONS", "COMPARATOR", "RAW_STRING", 
			"JSON_CONSTANT", "NAME", "STRING", "REAL_OR_EXPONENT_NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JSONFormula.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JSONFormulaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FormulaContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JSONFormulaParser.EOF, 0); }
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			expression(0);
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BinaryExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Binary_opContext binary_op() {
			return getRuleContext(Binary_opContext.class,0);
		}
		public BinaryExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class JmesPathContext extends ExpressionContext {
		public JmesPathExpressionContext jmesPathExpression() {
			return getRuleContext(JmesPathExpressionContext.class,0);
		}
		public JmesPathContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class TopLevelStringContext extends ExpressionContext {
		public TerminalNode RAW_STRING() { return getToken(JSONFormulaParser.RAW_STRING, 0); }
		public TopLevelStringContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class TopLevelIntContext extends ExpressionContext {
		public TerminalNode SIGNED_INT() { return getToken(JSONFormulaParser.SIGNED_INT, 0); }
		public TopLevelIntContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionCallContext extends ExpressionContext {
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public FunctionCallContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class BraceExpressionContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public BraceExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class PostfixContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Postfix_opContext postfix_op() {
			return getRuleContext(Postfix_opContext.class,0);
		}
		public PostfixContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class UnaryExpressionContext extends ExpressionContext {
		public Unary_opContext unary_op() {
			return getRuleContext(Unary_opContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UnaryExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class TopLevelNumberContext extends ExpressionContext {
		public TerminalNode NUMBER() { return getToken(JSONFormulaParser.NUMBER, 0); }
		public TopLevelNumberContext(ExpressionContext ctx) { copyFrom(ctx); }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				_localctx = new TopLevelIntContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(60);
				match(SIGNED_INT);
				}
				break;
			case 2:
				{
				_localctx = new TopLevelNumberContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(61);
				match(NUMBER);
				}
				break;
			case 3:
				{
				_localctx = new TopLevelStringContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(62);
				match(RAW_STRING);
				}
				break;
			case 4:
				{
				_localctx = new UnaryExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(63);
				unary_op();
				setState(64);
				expression(5);
				}
				break;
			case 5:
				{
				_localctx = new BraceExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(66);
				match(T__0);
				setState(67);
				expression(0);
				setState(68);
				match(T__1);
				}
				break;
			case 6:
				{
				_localctx = new FunctionCallContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(70);
				function_call();
				}
				break;
			case 7:
				{
				_localctx = new JmesPathContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(71);
				jmesPathExpression(0);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(80);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new BinaryExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(74);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(75);
						binary_op();
						setState(76);
						expression(7);
						}
						break;
					case 2:
						{
						_localctx = new PostfixContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(78);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(79);
						postfix_op();
						}
						break;
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Unary_opContext extends ParserRuleContext {
		public Unary_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_op; }
	}

	public final Unary_opContext unary_op() throws RecognitionException {
		Unary_opContext _localctx = new Unary_opContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unary_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_la = _input.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_opContext extends ParserRuleContext {
		public TerminalNode COMPARATOR() { return getToken(JSONFormulaParser.COMPARATOR, 0); }
		public Binary_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_op; }
	}

	public final Binary_opContext binary_op() throws RecognitionException {
		Binary_opContext _localctx = new Binary_opContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_binary_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << COMPARATOR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Postfix_opContext extends ParserRuleContext {
		public Postfix_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfix_op; }
	}

	public final Postfix_opContext postfix_op() throws RecognitionException {
		Postfix_opContext _localctx = new Postfix_opContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_postfix_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public TerminalNode FUNCTIONS() { return getToken(JSONFormulaParser.FUNCTIONS, 0); }
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(FUNCTIONS);
			setState(92);
			match(T__0);
			setState(93);
			expression_list();
			setState(94);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nonempty_expr_listContext extends ParserRuleContext {
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public Nonempty_expr_listContext nonempty_expr_list() {
			return getRuleContext(Nonempty_expr_listContext.class,0);
		}
		public Parm_separatorContext parm_separator() {
			return getRuleContext(Parm_separatorContext.class,0);
		}
		public Nonempty_expr_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonempty_expr_list; }
	}

	public final Nonempty_expr_listContext nonempty_expr_list() throws RecognitionException {
		return nonempty_expr_list(0);
	}

	private Nonempty_expr_listContext nonempty_expr_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Nonempty_expr_listContext _localctx = new Nonempty_expr_listContext(_ctx, _parentState);
		Nonempty_expr_listContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_nonempty_expr_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(99);
			parameter();
			}
			_ctx.stop = _input.LT(-1);
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Nonempty_expr_listContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_nonempty_expr_list);
					setState(101);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(102);
					parm_separator();
					setState(103);
					parameter();
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Expression_listContext extends ParserRuleContext {
		public Nonempty_expr_listContext nonempty_expr_list() {
			return getRuleContext(Nonempty_expr_listContext.class,0);
		}
		public Expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_list; }
	}

	public final Expression_listContext expression_list() throws RecognitionException {
		Expression_listContext _localctx = new Expression_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expression_list);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__0:
			case T__2:
			case T__3:
			case T__6:
			case T__14:
			case T__16:
			case T__18:
			case T__21:
			case T__22:
			case T__23:
			case SIGNED_INT:
			case NUMBER:
			case FUNCTIONS:
			case RAW_STRING:
			case JSON_CONSTANT:
			case NAME:
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				nonempty_expr_list(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parm_separatorContext extends ParserRuleContext {
		public Parm_separatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parm_separator; }
	}

	public final Parm_separatorContext parm_separator() throws RecognitionException {
		Parm_separatorContext _localctx = new Parm_separatorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parm_separator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JmesPathExpressionContext extends ParserRuleContext {
		public JmesPathExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jmesPathExpression; }
	 
		public JmesPathExpressionContext() { }
		public void copyFrom(JmesPathExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PipeExpressionContext extends JmesPathExpressionContext {
		public List<JmesPathExpressionContext> jmesPathExpression() {
			return getRuleContexts(JmesPathExpressionContext.class);
		}
		public JmesPathExpressionContext jmesPathExpression(int i) {
			return getRuleContext(JmesPathExpressionContext.class,i);
		}
		public PipeExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class IdentifierExpressionContext extends JmesPathExpressionContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public IdentifierExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class NotExpressionContext extends JmesPathExpressionContext {
		public JmesPathExpressionContext jmesPathExpression() {
			return getRuleContext(JmesPathExpressionContext.class,0);
		}
		public NotExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class RawStringExpressionContext extends JmesPathExpressionContext {
		public TerminalNode RAW_STRING() { return getToken(JSONFormulaParser.RAW_STRING, 0); }
		public RawStringExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ComparisonExpressionContext extends JmesPathExpressionContext {
		public List<JmesPathExpressionContext> jmesPathExpression() {
			return getRuleContexts(JmesPathExpressionContext.class);
		}
		public JmesPathExpressionContext jmesPathExpression(int i) {
			return getRuleContext(JmesPathExpressionContext.class,i);
		}
		public TerminalNode COMPARATOR() { return getToken(JSONFormulaParser.COMPARATOR, 0); }
		public ComparisonExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ParenExpressionContext extends JmesPathExpressionContext {
		public JmesPathExpressionContext jmesPathExpression() {
			return getRuleContext(JmesPathExpressionContext.class,0);
		}
		public ParenExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class BracketExpressionContext extends JmesPathExpressionContext {
		public BracketSpecifierContext bracketSpecifier() {
			return getRuleContext(BracketSpecifierContext.class,0);
		}
		public BracketExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class OrExpressionContext extends JmesPathExpressionContext {
		public List<JmesPathExpressionContext> jmesPathExpression() {
			return getRuleContexts(JmesPathExpressionContext.class);
		}
		public JmesPathExpressionContext jmesPathExpression(int i) {
			return getRuleContext(JmesPathExpressionContext.class,i);
		}
		public OrExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class CurrentNodeExpressionContext extends JmesPathExpressionContext {
		public CurrentNodeContext currentNode() {
			return getRuleContext(CurrentNodeContext.class,0);
		}
		public CurrentNodeExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ChainExpressionContext extends JmesPathExpressionContext {
		public JmesPathExpressionContext jmesPathExpression() {
			return getRuleContext(JmesPathExpressionContext.class,0);
		}
		public ChainedExpressionContext chainedExpression() {
			return getRuleContext(ChainedExpressionContext.class,0);
		}
		public ChainExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class AndExpressionContext extends JmesPathExpressionContext {
		public List<JmesPathExpressionContext> jmesPathExpression() {
			return getRuleContexts(JmesPathExpressionContext.class);
		}
		public JmesPathExpressionContext jmesPathExpression(int i) {
			return getRuleContext(JmesPathExpressionContext.class,i);
		}
		public AndExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class MultiSelectHashExpressionContext extends JmesPathExpressionContext {
		public MultiSelectHashContext multiSelectHash() {
			return getRuleContext(MultiSelectHashContext.class,0);
		}
		public MultiSelectHashExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class WildcardExpressionContext extends JmesPathExpressionContext {
		public WildcardContext wildcard() {
			return getRuleContext(WildcardContext.class,0);
		}
		public WildcardExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionCallExpressionContext extends JmesPathExpressionContext {
		public FunctionExpressionContext functionExpression() {
			return getRuleContext(FunctionExpressionContext.class,0);
		}
		public FunctionCallExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class MultiSelectListExpressionContext extends JmesPathExpressionContext {
		public MultiSelectListContext multiSelectList() {
			return getRuleContext(MultiSelectListContext.class,0);
		}
		public MultiSelectListExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class BracketedExpressionContext extends JmesPathExpressionContext {
		public JmesPathExpressionContext jmesPathExpression() {
			return getRuleContext(JmesPathExpressionContext.class,0);
		}
		public BracketSpecifierContext bracketSpecifier() {
			return getRuleContext(BracketSpecifierContext.class,0);
		}
		public BracketedExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class LiteralExpressionContext extends JmesPathExpressionContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public LiteralExpressionContext(JmesPathExpressionContext ctx) { copyFrom(ctx); }
	}

	public final JmesPathExpressionContext jmesPathExpression() throws RecognitionException {
		return jmesPathExpression(0);
	}

	private JmesPathExpressionContext jmesPathExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		JmesPathExpressionContext _localctx = new JmesPathExpressionContext(_ctx, _parentState);
		JmesPathExpressionContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_jmesPathExpression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				_localctx = new BracketExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
